加入看门狗

--- a/GasTransition/GasTransition.vcxproj.filters
+++ b/GasTransition/GasTransition.vcxproj.filters
@@ -97,6 +97,12 @@
     <Filter Include="VisualGDB settings">
       <UniqueIdentifier>{bd455138-a489-40ff-aa3d-3d6d77464008}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source files\STM32Cube HAL\IWDG">
+      <UniqueIdentifier>{e2d1e612-4ab9-4c23-b3cc-d4021a46edfd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header files\STM32Cube HAL\IWDG">
+      <UniqueIdentifier>{fe4a704a-f6b1-41f7-9b61-c68bced1cbd2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile" />
@@ -279,5 +285,17 @@
     <ClCompile Include="..\Src\system_stm32f1xx.c">
       <Filter>Source files\Startup</Filter>
     </ClCompile>
+    <ClCompile Include="..\Src\iwdg.c">
+      <Filter>Source files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Drivers\STM32F1xx_HAL_Driver\Src\stm32f1xx_hal_iwdg.c">
+      <Filter>Source files\STM32Cube HAL\IWDG</Filter>
+    </ClCompile>
+    <ClInclude Include="..\Inc\iwdg.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Drivers\STM32F1xx_HAL_Driver\Inc\stm32f1xx_hal_iwdg.h">
+      <Filter>Header files\STM32Cube HAL\IWDG</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
